Added SOMA dataloader

--- a/notebooks/SOMA.ipynb
+++ b/notebooks/SOMA.ipynb
@@ -66,7 +66,7 @@
     "forward_0 = data['forward_0']['month_0']\n",
     "print(forward_0.shape)\n",
     "print(forward_0[0, :, :, 20, 13])\n",
-    "print(np.unique(forward_0))\n",
+    "print(np.unique(forward_0[0, :, :, :, 14]))\n",
     "# fig, ax = plt.subplots()\n",
     "# ax.imshow(forward_0[1,:,:,0,10])\n"
    ]
