--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
      ]
     },
     {
@@ -130,7 +130,6 @@
     "from AdjointMatchingNN.utils.metrics import mean_squared_error, r2\n",
     "from AdjointMatchingNN.utils.scaler import StandardScaler\n",
     "import pickle\n",
-    "import optax\n",
     "import numpy as np\n",
     "from jax import vmap\n",
     "\n",
@@ -153,8 +152,6 @@
     "true_vjp = vmap(vect_jcob_prod, in_axes=0, out_axes=0)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "x, y, adj = combine_burgers_data(\"./AdjointMatchingNN//Data/mixed_nu/\")\n",
     "train, val, test = split_data(x, y, adj, shuffle_all=True)\n",
     "\n",
@@ -167,23 +164,12 @@
     "    act_fn=\"tanh\",\n",
     "    scaler=scaler,\n",
     ")\n",
-    "# sup = Trainer(\n",
-    "#     net=net,\n",
-    "#     num_epochs=args.epoch,\n",
-    "#     batch_size=args.batch_size,\n",
-    "#     learning_rate=args.lr,\n",
-    "#     optimizer=optax.adam,\n",
-    "#     if_full_Jacobian=\"False\",\n",
-    "# )\n",
     "\n",
     "with open('./logs/logger_06-15-09_AdjointMatchingNN_lr0.0001_alpha1', 'rb') as f:\n",
     "    logger = pickle.load(f)\n",
     "\n",
     "\n",
-    "train, val, test = split_data(x, y, adj, shuffle_all=True)\n",
-    "scaler = StandardScaler(train['x'])\n",
     "x = test['x']\n",
-    "net = MLP([200]*5, in_dim=train['x'].shape[1], out_dim=train['y'].shape[1], act_fn='tanh', scaler=scaler)\n",
     "\n",
     "params = logger['final_params']\n",
     "test_pred = net.apply(params, x)\n",
@@ -192,7 +178,7 @@
     "v = test_pred - test['y']\n",
     "# pred_adj = net.full_Jacobian(params, x)\n",
     "pred_adj = net.nn_adjoint(params, x, v)\n",
-    "true_adj = true_vjp(v, test['adj'])\n",
+    "# true_adj = true_vjp(v, test['adj'])\n",
     "# pred_adj = adj_scaler.inverse_transform(pred_adj)\n",
     "\n",
     "u_pred = net.apply(params, x)\n",
@@ -202,8 +188,8 @@
     "print('The test MSE is {:.4f}'.format(mean_squared_error(test['y'], test_pred)))\n",
     "# print('The train MSE is {:.4f}'.format(mean_squared_error(train['y'], u_pred)))\n",
     "print('The test R2 is {:.4f}'.format(r2(test['y'], test_pred)))\n",
-    "print('The test adj mse is {:.4f}'.format(mean_squared_error(true_adj, pred_adj)))\n",
-    "print('The test adj R2 is {:4f}'.format(r2(true_adj, pred_adj)))\n"
+    "# print('The test adj mse is {:.4f}'.format(mean_squared_error(true_adj, pred_adj)))\n",
+    "# print('The test adj R2 is {:4f}'.format(r2(true_adj, pred_adj)))\n"
    ]
   },
   {
