--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,12 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.011080996"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pickle \n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import h5py\n",
+    "\n",
+    "dataGM = h5py.File('/pscratch/sd/y/yixuans/datatset/SOMA/GM-prog-var-surface.hdf5', 'r')\n",
+    "\n",
+    "with h5py.File('/pscratch/sd/y/yixuans/datatset/SOMA/GM-prog-var-surface.hdf5', 'w') as f:\n",
+    "    for i in range(100):\n",
+    "        tmp = dataGM[f'forward_{i}'][:, 0, ..., [3, 6, 10, 14, 15, -1]]\n",
+    "        f.create_dataset(f'forward_{i}', data=tmp)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -386,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
