deep ensemble perlmutter

--- a/notebooks/quick-plots.ipynb
+++ b/notebooks/quick-plots.ipynb
@@ -13,6 +13,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'group'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m             val_loss\u001b[38;5;241m.\u001b[39mappend(val\u001b[38;5;241m.\u001b[39mgroup(\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m train_loss, val_loss\n\u001b[0;32m---> 16\u001b[0m train_loss, val_loss \u001b[38;5;241m=\u001b[39m \u001b[43mread_log\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../experiments/4D-GM_D_AVG-MSE-Adam/log.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 12\u001b[0m, in \u001b[0;36mread_log\u001b[0;34m(log_file)\u001b[0m\n\u001b[1;32m     10\u001b[0m         train \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msearch(train_pattern, line)\n\u001b[1;32m     11\u001b[0m         val \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msearch(val_pattern, line)\n\u001b[0;32m---> 12\u001b[0m         train_loss\u001b[38;5;241m.\u001b[39mappend(\u001b[43mtrain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroup\u001b[49m(\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m     13\u001b[0m         val_loss\u001b[38;5;241m.\u001b[39mappend(val\u001b[38;5;241m.\u001b[39mgroup(\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m train_loss, val_loss\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def read_log(log_file):\n",
+    "    train_loss = []\n",
+    "    val_loss = []\n",
+    "    train_pattern = r'Train Loss: (\\d+\\.\\d+)'\n",
+    "    val_pattern = r'Val Loss: (\\d+\\.\\d+)'\n",
+    "    with open(log_file, 'r') as file:\n",
+    "        for line in file:\n",
+    "            print(line)\n",
+    "            train = re.search(train_pattern, line)\n",
+    "            val = re.search(val_pattern, line)\n",
+    "            train_loss.append(train.group(1))\n",
+    "            val_loss.append(val.group(1))\n",
+    "            break\n",
+    "    return train_loss, val_loss\n",
+    "\n",
+    "\n",
+    "train_loss, val_loss = read_log('../experiments/4D-GM_D_AVG-MSE-Adam/log.txt')\n",
+    "\n",
+    "\n",
+    "\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
